syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "parameter.proto";

service PackageService {
  rpc GetPackage(GetPackageRequest) returns (Package) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/packages/{id}"
    };
  }

  rpc ListPackages(ListPackagesRequest) returns (ListPackagesResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/packages"
    };
  }

  rpc DeletePackage(DeletePackageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v1alpha1/packages/{id}"
    };
  }

  rpc GetTemplate(GetTemplateRequest) returns (GetTemplateResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/packages/{id}/templates"
    };
  }
}

message GetPackageRequest {
  uint32 id = 1;
}

message ListPackagesRequest {
  string page_token = 1;
  int32 page_size = 2;
}

message ListPackagesResponse {
  repeated Package packages = 1;
  string next_page_token = 2;
}

message DeletePackageRequest {
  uint32 id = 1;
}

message GetTemplateRequest {
  uint32 id = 1;
}

message GetTemplateResponse {
  string template = 1;
}

message Package{
  uint32 id = 1;
  google.protobuf.Timestamp created_at =2;
  string name = 3;
  string description = 4;
  repeated Parameter parameters = 5;
}